# Complete-Python-Bootcamp

./: .gitignore  pyproject.toml
1-Python Basics/: 1.1-Variables.ipynb  1.2-Datatypes.ipynb  1.3-operators.ipynb
1-Python Basics/assignment_solution/: assignment_question.ipynb  assignment_solution.ipynb
2-Control Flow/: Conditionalstatements.ipynb
