[project]
name = "complete-python-bootcamp"
version = "0.1.0"
description = "Data science bootcamp with python from Udemy"
authors = [
    {name = "quantitative-ecologist",email = "49170767+quantitative-ecologist@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
