[project]
name = "complete-python-bootcamp"
version = "0.1.0"
description = "Data science bootcamp with python from Udemy"
authors = [
    {name = "quantitative-ecologist",email = "49170767+quantitative-ecologist@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "flask (>=3.1.0,<4.0.0)",
    "memory-profiler (>=0.61.0,<0.62.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
